--- a/roles/magento/tasks/main.yml
+++ b/roles/magento/tasks/main.yml
@@ -18,13 +18,19 @@
 #     composer create-project --repository=https://repo.magento.com/ magento/project-community-edition=2.4.3 {{ magento_dir }}
 
 
+- name: create magento directory 
+  file:
+    path: "{{ magento_dir }}"
+    state: directory
+
+
 - name: download magento files 
   shell: |
-    mkdir magento_dir
-    cd {{ magento_dir }}
-    wget https://github.com/magento/magento2/archive/{{ magento_version }}.tar.gz
-    tar -zxvf {{ magento_version }}.tar.gz {{ magento_dir}}
-    rm {{ magento_version }}.tar.gz
+    wget https://github.com/magento/magento2/archive/{{ magento_ver }}.tar.gz 
+    tar -zxvf {{ magento_ver }}.tar.gz --strip-components=1
+    rm {{ magento_ver }}.tar.gz
+  args:
+    chdir: "{{ magento_dir }}"
 
 - name: Set Files Permissions to g+w
   shell: find var generated vendor pub/static pub/media app/etc -type f -exec chmod g+w {} \;
@@ -48,6 +54,12 @@
     mode: u+x
   notify: restart elasticsearch
 
+- name: Install Composer dependencies
+  shell: |
+    composer install --no-interaction
+  args:
+    chdir: "{{ magento_dir }}"
+  become: yes
 
 - name: Install Magento
   shell: |
